--- a/Minesweeper Final/Minesweeper Final.csproj
+++ b/Minesweeper Final/Minesweeper Final.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Celda.cs" />
+    <Compile Include="ConsoleGame.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="ICell.cs" />
+    <Compile Include="Mina.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
